src/css/header-bump.css
/* ... */
html[data-theme=dark] .header {
  --body-font-color: white;
}

html[data-theme=dark] {
  --text-color: white;
}

.header {
  max-width: 100%;
  height: var(--navbar-height);
  font-family: var(--body-font-family);
}

.platform-indicator-mobile {
  display: none;
}

.navbar {
  background: var(--navbar-background);
  max-height: var(--navbar-height);
  color: var(--navbar-font-color);
  font-size: var(--secondary-font-size);
  display: flex;
  align-items: center;
  position: fixed;
  top: var(--announcement-bar-height);
  left: 0;
  right: 0;
  z-index: var(--z-index-navbar);
  padding: 0 16px;
  box-sizing: border-box;
  border-bottom: 1px solid #e5e9f0;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
}

.navbar a {
  text-decoration: none;
}

.custom-class-kapa {
  cursor: pointer;
  font-family: inherit;
  font-size: 1rem;
  line-height: var(--body-line-height);
  padding-inline: 6px;
  margin: 0;
}

.navbar-menu {
  color: #a8b2c7;
  justify-content: flex-start;
}

.navbar-brand {
  display: flex;
}

.navbar-brand > a:hover {
  background: none;
}

.navbar-brand .navbar-item {
  color: var(--navbar-font-color);
  margin-left: 8px;
}

.navbar-brand .navbar-item:first-child {
  align-self: center;
  padding: 0;
  font-size: calc(22 / var(--rem-base) * 1rem);
  flex-wrap: wrap;
  line-height: 1;
}

.navbar-brand .navbar-item:first-child a {
  color: inherit;
  word-wrap: normal;
}

.navbar-brand .navbar-item:first-child :not(:last-child) {
  padding-right: 0.375rem;
}

.navbar-brand .navbar-item.search {
  flex: auto;
  justify-content: flex-end;
}

#search-input {
  color: #333;
  font-family: inherit;
  font-size: 0.95rem;
  width: 150px;
  border: 1px solid #dbdbdb;
  border-radius: 0.1em;
  line-height: 1.5;
  padding: 0 0.25em;
}

#search-input:disabled {
  background-color: #dbdbdb;
  /* disable cursor */
  cursor: not-allowed;
  pointer-events: all !important;
}

#search-input:disabled::placeholder {
  color: #4c4c4c;
}

#search-input:focus {
  outline: none;
}

.navbar-burger {
  background: none;
  border: none;
  outline: none;
  line-height: 1;
  position: relative;
  width: 3rem;
  padding: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-left: auto;
  min-width: 0;
}

.navbar-burger:hover {
  cursor: pointer;
}

.navbar-burger span {
  background-color: var(--navbar-font-color);
  height: 1.5px;
  width: 1rem;
}

.navbar-burger:not(.is-active) span {
  transition: transform ease-out 0.25s, opacity 0s 0.25s, margin-top ease-out 0.25s 0.25s;
}

.navbar-burger span + span {
  margin-top: 0.25rem;
}

.navbar-burger.is-active span + span {
  margin-top: -1.5px;
}

.navbar-burger.is-active span:nth-child(1) {
  transform: rotate(45deg);
}

.navbar-burger.is-active span:nth-child(2) {
  opacity: 0;
}

.navbar-burger.is-active span:nth-child(3) {
  transform: rotate(-45deg);
}

.navbar-item,
.navbar-link {
  color: var(--navbar-menu-font-color);
  display: block;
  line-height: var(--doc-line-height);
  padding: 6px 8px;
}

.home .navbar-item,
.home .navbar-link,
.api .navbar-item,
.api .navbar-link,
.status-404 .navbar-item,
.status-404 .navbar-link {
  color: #f5f5f5;
}

.navbar-item.is-current,
.navbar-item:hover,
.navbar-link:hover {
  background-color: rgba(255, 255, 255, 0.08);
  color: white;
  border-radius: 10px;
  padding: 6px 8px;
}

.navbar-item.has-dropdown {
  padding: 0;
}

.navbar-item .icon {
  width: 1.25rem;
  height: 1.25rem;
  display: block;
}

.navbar-item .icon img,
.navbar-item .icon svg {
  fill: currentColor;
  width: inherit;
  height: inherit;
}

.navbar-link {
  padding-right: 2.5em;
}

.navbar-dropdown .navbar-item {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.navbar-dropdown .navbar-item.has-label {
  display: flex;
  justify-content: space-between;
}

.navbar-dropdown .navbar-item small {
  color: var(--toolbar-muted-color);
  font-size: calc(12 / var(--rem-base) * 1rem);
}

.navbar-divider {
  background-color: var(--navbar-menu-border-color);
  border: none;
  height: 1px;
  margin: 0.25rem 0;
}

.navbar .button {
  display: inline-flex;
  align-items: center;
  background: var(--navbar-button-background);
  border: 1px solid var(--navbar-button-border-color);
  border-radius: 0.15rem;
  height: 1.75rem;
  color: var(--navbar-button-font-color);
  padding: 0 0.75em;
  white-space: nowrap;
}

.navbar-end {
  display: flex;
  flex: auto;
  gap: 10px;
  align-items: center;
  flex-wrap: wrap;
  justify-content: flex-end;
}

@media screen and (max-width: 768.5px) {
  .navbar-brand .navbar-item.search {
    padding-left: 0;
    padding-right: 0;
  }
}

@media screen and (min-width: 769px) {
  #search-input {
    width: 200px;
  }
}

@media screen and (max-width: 1024px) {
  .navbar-brand {
    height: var(--navbar-height);
    align-items: center;
    margin-right: 8px;
  }

  #switch-theme {
    margin: 0;
    margin-top: -2px;
  }

  .platform-indicator-mobile {
    display: inline-block;
    margin-left: 12px;
    margin-right: 16px;
    color: #fff;
    vertical-align: middle;
    order: 1;
    flex: 1 1 auto;
    min-width: 0;
    text-align: right;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .theme-switcher {
    margin-right: 16px;
  }

  .header {
    margin-bottom: 0;
  }

  .navbar-brand .navbar-item {
    align-items: center;
    display: flex;
  }

  .navbar-menu {
    box-shadow: 0 8px 16px rgba(10, 10, 10, 0.1);
    max-height: var(--body-min-height);
    overflow-y: auto;
    overscroll-behavior: none;
    padding: 0.5rem 0;
  }

  .navbar-menu:not(.is-active) {
    display: none;
  }

  .navbar-burger {
    order: 2;
    margin-left: 4px;
  }
}
/* ... */

